# logstream

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
cli/src/: main.rs
dashboard/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._tree.txt  index.html
dashboard/_next/static/chunks/: 1b61ffd43be8b208.js  385818a21df75ee0.js  551e6fd5a0ddaac4.js  a6dad97d9634a72d.js.map  ca4f9c478d8fc28b.js  de98d92c8dbfde84.css  e7dee33b8fcb988d.js  turbopack-eb6494ae16c61964.js
dashboard/_not-found/: __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.txt
mcp/: log-mcp-server.ts  package.json
sdk/browser/: index.ts
sdk/node/: index.ts
src/: collector.rs  config.rs  main.rs  mcp.rs  meili.rs  models.rs  routes.rs  subscribers.rs
