[package]
name = "logstream"
version = "0.1.0"
edition = "2021"
description = "Real-time multi-project log collector with Meilisearch backend"

[[bin]]
name = "logstream"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }

# WebSocket
tokio-tungstenite = "0.26"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Meilisearch client
meilisearch-sdk = "0.28"

# IDs
ulid = "1"
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
futures = "0.3"
dashmap = "6"
anyhow = "1"
